# PSXStockTradingPredictorwithDashboard

./: .dockerignore  .env  .env.example  .gitattributes  .gitattributes 2  .gitignore  .pre-commit-config.yaml  .webui_secret_key  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PSX_Dashboard.applescript  PSX_Dividend_Schedule.db  README.md  debug_fix.py  docker-compose.yml  environment.yml  mypy.ini  portfolio_data 2.json  pyproject 2.toml  pyproject.toml  query_signals.py  read_excel.py  requirements-dev.txt  requirements-streamlit.txt  requirements.txt  run_dashboard.sh  setup-streamlit.py  setup.cfg  setup.py  simple-dockerfile 2  streamlit_app.py
.streamlit/: config.toml
config/: .gitignore  config.json  config.py  default_config.json  dev_config.py  financial_reports_config.json  paths.py  prod_config.py  psx_config.json  requirements.txt  setup.py  user_config.json
docker/: Dockerfile  docker-compose.yml  streamlit-dockerfile
docs/: code_protection.md  context.md  database_standards.md  system_architecture.md
docs/api/: README.md
docs/development/: setup.md
fonts 2/: fonts.json
reports/20250419/: signal_report_20250419_190852.txt
reports/20250422/: signal_report_20250422_010407.txt  signal_report_20250422_022738.txt
reports/20250424/: signal_report_20250424_062019.txt  signal_report_20250424_175757.txt
reports/20250426/: signal_report_20250426_224648.txt  signal_report_20250426_234955.txt
reports/20250503/: signal_report_20250503_233730.txt
reports/20250505/: signal_report_20250505_183607.txt
reports/20250506/: signal_report_20250506_180322.txt
reports/20250507/: signal_report_20250507_181726.txt
reports/20250508/: signal_report_20250508_180546.txt
reports/20250510/: signal_report_20250510_192522.txt
reports/20250511/: signal_report_20250511_182801.txt
reports/20250512/: signal_report_20250512_175955.txt
reports/20250513/: signal_report_20250513_175751.txt
reports/20250516/: signal_report_20250516_172252.txt  signal_report_20250516_175241.txt
reports/20250519/: signal_report_20250519_001918.txt
reports/20250522/: signal_report_20250522_054425.txt  signal_report_20250522_173039.txt
reports/20250523/: signal_report_20250523_090649.txt
reports/signal_tracking_20250414/: stock_signal_report_20250414_222056.txt  stock_signal_report_20250414_222152.txt  stock_signal_report_20250414_222958.txt  stock_signal_report_20250414_223743.txt  stock_signal_report_20250414_224111.txt  stock_signal_report_20250414_224420.txt  stock_signal_report_20250414_224814.txt  stock_signal_report_20250414_225102.txt  stock_signal_report_20250414_225156.txt  stock_signal_report_20250414_225354.txt  stock_signal_report_20250414_225524.txt  stock_signal_report_20250414_230555.txt  stock_signal_report_20250414_231253.txt  stock_signal_report_20250414_231851.txt
reports/signal_tracking_20250415/: stock_signal_report_20250415_000256.txt  trend_analysis_20250415.csv
reports/signal_tracking_20250418/: performance_by_days_20250418.csv
requirements/: base.txt  dev.txt  prod.txt  requirements.txt
scripts/: run_stock_signal_tracker.py  setup_dev.sh
scripts/config/: config.py
scripts/data_processing/: 00-Psx_Stock_analysis_tool_KMI30_Adv.py  01-PSX_Database_data_download_to_SQL_db_PSX.py  04-List_Weekly_RSI_GT_40_BUY_SELL_KMI30_100_Weekly_v1.0_stable.py  10-draw_indicator_trend_lines_with_signals_Stable_V_1.0.py  PSXAnnouncement.py  (+11 more)
src/: financial_reports.py  run_stock_signal_tracker.py  stock_analyzer.py  streamlit-app.py
(+78 files in other folders)
