[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psx_dashboard"
version = "1.0.0"
description = "PSX Stock Trading Predictor Dashboard"
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.32.0",
    "pandas==2.0.0",
    "numpy==1.24.0",
    "plotly==5.18.0",
    "python-dotenv==1.0.0",
    "pytz==2024.1",
    "requests==2.31.0",
    "beautifulsoup4==4.12.0",
    "lxml==4.9.0",
    "yfinance==0.2.36",
    "ta==0.11.0",
    "scikit-learn==1.3.0",
    "matplotlib==3.8.0",
    "seaborn==0.13.0",
    "pymongo==4.6.0",
    "sqlalchemy==2.0.0",
    "psycopg2-binary==2.9.9",
    "pytest==7.4.0",
    "black==23.12.0",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "pre-commit==3.6.0",
    "fpdf2==2.7.0",
    "pillow==10.0.0",
    "PyPDF2==3.0.0",
    "python-docx==0.8.11",
    "plotly-express==0.4.1"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"] 